<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_zealand"
    tools:context=".UI.FragmentPopupMenu">

    <Button
        android:id="@+id/saveProfile_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/design_button"
        android:text="@string/popup_menu_edit_profile_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editConfirmPassword_et" />

    <EditText
        android:id="@+id/editEmail_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/design_edittext"
        android:ems="10"
        android:hint="@string/popup_menu_edit_profile_email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:theme="@style/EditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhoneNumber_et" />

    <EditText
        android:id="@+id/editPassword_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/design_edittext"
        android:ems="10"
        android:hint="@string/popup_menu_edit_profile_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:theme="@style/EditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail_et" />

    <EditText
        android:id="@+id/editConfirmPassword_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/design_edittext"
        android:ems="10"
        android:hint="@string/popup_menu_edit_profile_password_confirm"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:theme="@style/EditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword_et" />

    <TextView
        android:id="@+id/editProfileTitle_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/popup_menu_edit_profile_edit"
        android:textColor="@color/darkblue"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPhoneNumber_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/design_edittext"
        android:ems="10"
        android:hint="@string/popup_menu_edit_profile_phone"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:theme="@style/EditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSurname_et" />

    <EditText
        android:id="@+id/editFirstName_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/design_edittext"
        android:ems="10"
        android:hint="@string/popup_menu_edit_profile_firstname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:theme="@style/EditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileTitle_tv" />

    <EditText
        android:id="@+id/editSurname_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/design_edittext"
        android:ems="10"
        android:hint="@string/popup_menu_edit_profile_surname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:theme="@style/EditTextTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editFirstName_et" />

</androidx.constraintlayout.widget.ConstraintLayout>