<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/design_button">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/question_et"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColorHint="#AAAAAA"
        android:theme="@style/TextInputLayoutBottomLine"
        app:hintTextColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/add_question_edittext_field_hint"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA"
            tools:ignore="TouchTargetSizeCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/add_question_text_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/design_button"
        android:text="@string/add_question_create_button"
        app:layout_constraintEnd_toEndOf="@+id/question_et"
        app:layout_constraintTop_toBottomOf="@+id/question_et" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/design_button"
        android:text="@string/add_question_cancel_button"
        app:layout_constraintStart_toStartOf="@+id/question_et"
        app:layout_constraintTop_toBottomOf="@+id/question_et" />

</androidx.constraintlayout.widget.ConstraintLayout>